--- a/client/src/app/components/layout/multiplayer/matchmaking-loading-page/matchmaking-loading-page.component.scss
+++ b/client/src/app/components/layout/multiplayer/matchmaking-loading-page/matchmaking-loading-page.component.scss
@@ -125,12 +125,7 @@
     align-items: flex-end;
 }
 
-.username {
-    font-family: $main-font;
-    font-weight: 700;
-    font-size: 25px;
-    color: white;
-    margin: 0;
+app-username {
     margin-bottom: 5px;
 }
 
