--- a/client/src/app/components/main-chat/main-chat.component.html
+++ b/client/src/app/components/main-chat/main-chat.component.html
@@ -15,9 +15,9 @@
         <div class="messages" #scrollContainer>
             <div class="message" *ngFor="let message of messages$ | async">
                 <div class="header">
-                    <div class="player" (click)="viewProfile(message.userid)" [tooltip]="getPlayerTooltip(message.username)">
-                        <app-league-icon [league]="message.league" [height]="13" />
-                        <h3>{{message.username}}</h3>
+                    <div class="player">
+                        <!-- <app-league-icon *ngIf="!getTitle(message.highestTrophies)" [league]="message.league" [height]="13" /> -->
+                        <app-username [username]="message.username" [userid]="message.userid" [highestTrophies]="message.highestTrophies" [fontSize]="10" [fontWeight]="600" />
                     </div>
                     <p class="time-ago">{{timeAgo(message.timeMs)}}</p>
                 </div>
