--- a/client/src/app/components/ui/table/leaderboard-table.component.html
+++ b/client/src/app/components/ui/table/leaderboard-table.component.html
@@ -7,10 +7,10 @@
 
     <div class="row content" *ngFor="let row of rows; let i = index" [ngStyle]="{gridTemplateColumns: gridTemplateColumns((isExpanded$ | async) ?? true)}"
         [ngClass]="{'me': row.userid === myID, 'top' : i === 0, 'first' : row.rank === 1, 'second' : row.rank === 2, 'third' : row.rank === 3}">
-        <button class="cell player" (click)="viewProfile(row.userid)">
+        <button class="cell player">
             <div class="ranking prevent-select" [ngClass]="getDigitClassname(row.rank)">#{{ row.rank }}</div>
             <app-league-icon *ngIf="showLeague" [league]="row.league" [height]="22" />
-            <p class="username prevent-select" [tooltip]="'View ' + row.username + '\'s profile'">{{row.username}}</p>
+            <app-username [username]="row.username" [userid]="row.userid" [highestTrophies]="showTitle ? row.highestTrophies : 0" [fontSize]="14" [fontWeight]="600" />
             <app-online-indicator [isOnline]="row.isOnline || row.userid === myID" [inActivity]="row.inActivity" />
         </button>
         <ng-container *ngFor="let item of attributes | keyvalue: originalOrder">
