--- a/client/src/app/components/layout/game-analysis/game-analysis/game-analysis.component.html
+++ b/client/src/app/components/layout/game-analysis/game-analysis/game-analysis.component.html
@@ -103,7 +103,7 @@
                                         <app-solid-button tooltip="Previous placement (key: left)" icon="./assets/img/media-icons/left-2.svg" [color]="ButtonColor.GREY" [iconHeight]="15" [paddingHorizontal]="12" [paddingVertical]="6" (click)="previousPlacement()" />
                                         <app-solid-button tooltip="Previous frame (key: ,)" icon="./assets/img/media-icons/left.svg" [color]="ButtonColor.GREY" [iconHeight]="15" [paddingHorizontal]="12" [paddingVertical]="6" (click)="previousFrame()" />
                                         <app-solid-button tooltip="Next frame (key: .)" icon="./assets/img/media-icons/right.svg" [color]="ButtonColor.GREY" [iconHeight]="15" [paddingHorizontal]="12" [paddingVertical]="6" (click)="nextFrame()" />
-                                        <app-solid-button tooltip="Previous placement (key: right)" icon="./assets/img/media-icons/right-2.svg" [color]="ButtonColor.GREY" [iconHeight]="15" [paddingHorizontal]="12" [paddingVertical]="6" (click)="nextPlacement()" />
+                                        <app-solid-button tooltip="Next placement (key: right)" icon="./assets/img/media-icons/right-2.svg" [color]="ButtonColor.GREY" [iconHeight]="15" [paddingHorizontal]="12" [paddingVertical]="6" (click)="nextPlacement()" />
                                     </div>
                                     <div class="buttons">
 
