--- a/client/src/app/components/ui/modal-container/modal-container.component.html
+++ b/client/src/app/components/ui/modal-container/modal-container.component.html
@@ -7,5 +7,6 @@
         <app-profile-modal *ngIf="modal === ModalType.PROFILE" [config]="modalManager.getModalConfig()" />
         <app-select-starting-trophies-modal *ngIf="modal === ModalType.SELECT_STARTING_TROPHIES" />
         <app-generate-puzzles-modal *ngIf="modal === ModalType.GENERATE_PUZZLES" />
+        <app-puzzle-mode-modal *ngIf="modal === ModalType.PUZZLE_MODE" />
     </app-modal>
 </div>
