puzzle rush menu

--- a/client/src/app/components/ui/modal/modal.component.scss
+++ b/client/src/app/components/ui/modal/modal.component.scss
@@ -2,7 +2,7 @@
 
 .modal {
     position: relative;
-    background-color: $modal-color;
+    // background-color: $modal-color;
     border-radius: 15px;
 }
 
