--- a/client/src/app/components/modals/puzzle-mode-modal/puzzle-mode-modal.component.html
+++ b/client/src/app/components/modals/puzzle-mode-modal/puzzle-mode-modal.component.html
@@ -1,9 +1,36 @@
-<div class="modal">
-
-    <div class="options">
-        <button class="option" *ngFor="let mode of modes">
-            <p>{{mode}}</p>
+<div class="modal" *ngIf="meService.get$() | async as me" (click)="modalManager.hideModal()">
+    <div class="options" (click)="$event.stopPropagation()">
+        
+        <button class="option" *ngFor="let mode of modes" [ngClass]="mode" [ngClass]="{'locked': !canPlay(me, mode)}" (click)="onClick(me, mode, $event)">
+            <img  class="prevent-select" [src]="imagePath(mode)" width="70px" *ngIf="canPlay(me, mode)" />
+            <app-locked-icon *ngIf="!canPlay(me, mode)" [mode]="Mode.PUZZLES" [locked]="true" />
+            <div class="text">
+                <h1 class="prevent-select">{{modeLabels[mode]}}</h1>
+                <div class="description" *ngIf="canPlay(me, mode)">
+                    <ng-container *ngIf="mode === PuzzleMode.NORMAL">
+                        <p class="prevent-select">Solve rated puzzles. Your puzzle elo:</p>
+                        <app-puzzle-elo [puzzleElo]="me.puzzle_elo" [size]="12" />
+                    </ng-container>
+                    <p *ngIf="mode === PuzzleMode.RUSH" class="prevent-select">Solve as many puzzles as you can in 2 minutes</p>
+                    <p *ngIf="mode === PuzzleMode.BATTLE" class="prevent-select">Battle other players in Puzzle Blitz!</p>
+                </div>
+                <div class="lock-text" *ngIf="!canPlay(me, mode)">
+                    <ng-container *ngIf="mode === PuzzleMode.RUSH">
+                        <p class="prevent-select">Reach a puzzle elo of</p>
+                        <app-puzzle-elo [puzzleElo]="PUZZLE_RUSH_UNLOCK_ELO" [size]="12" />
+                        <p class="prevent-select">to unlock</p>
+                    </ng-container>
+                    <ng-container *ngIf="mode === PuzzleMode.BATTLE">
+                        <p class="prevent-select">
+                            Score
+                            <strong>{{me.puzzle_rush_best}}/{{PUZZLE_BATTLE_UNLOCK_RUSH}}</strong>
+                            in Puzzle Blitz to unlock
+                        </p>
+                    </ng-container>
+                </div>
+            </div>
+            
         </button>
-    </div>
 
+    </div>
 </div>
