--- a/client/src/app/components/modals/puzzle-mode-modal/puzzle-mode-modal.component.scss
+++ b/client/src/app/components/modals/puzzle-mode-modal/puzzle-mode-modal.component.scss
@@ -6,16 +6,122 @@
 
 .options {
     display: flex;
-    flex-direction: row;
-    gap: 15px;
+    flex-direction: column;
+    gap: 10px;
 }
 
 .option {
-    width: 200px;
-    height: 200px;
+    padding: 30px;
 
     background-color: rgba(255, 255, 255, 0.03);
+    background-color: $dark-color;
     border-radius: 10px;
-    padding: 12px 20px;
-    border: 2px solid transparent;
+    border: 2px solid $puzzle-color;
+
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 30px;
+
+    transition: all 0.2s;
+}
+
+.text {
+    width: 40vw;
+    min-width: 350px;
+    display: flex;
+    gap: 5px;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+
+.option:hover:not(.locked) {
+    cursor: pointer;
+
+    transform: scale(1.03);
+    filter: brightness(1.3) contrast(1.02);
+    opacity: 1;
+}
+
+.option:active:not(.locked) {
+    transform: scale(1.05);
+    filter: brightness(1.4) contrast(1.04);
+}
+
+.option.locked {
+    opacity: 0.5;
+    pointer-events: none;
+}
+
+.option.locked:hover {
+    cursor: default;
+}
+
+
+img {
+    display: block !important;
+}
+
+.option.normal img {
+    transform: translateX(10px);
+}
+
+h1, p {
+    font-family: $main-font;
+    padding: 0;
+    margin: 0;
+}
+
+h1 {
+    font-size: 32px;
+    font-weight: 700;
+    text-wrap: nowrap;
+    color: $puzzle-color;
+}
+
+p {
+    font-size: 12px;
+    font-weight: 500;
+    color: $puzzle-color;
+}
+
+app-locked-icon {
+    zoom: 0.7;
+}
+
+.lock-text, .description {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 5px;
+}
+
+.lock-text p.strong {
+    font-weight: 700;
+}
+
+@media screen and (max-width: 700px) {
+    .option {
+        zoom: 0.9;
+        padding: 25px 20px;
+    }
+}
+
+@media screen and (max-width: 600px) {
+    .option {
+        zoom: 0.7;
+    }
+}
+
+@media screen and (max-width: 500px) {
+    .option {
+        zoom: 0.6;
+    }
+}
+
+@media screen and (max-width: 400px) {
+    .option {
+        zoom: 0.55;
+    }
 }
