--- a/client/src/app/components/ui/modal/modal.component.html
+++ b/client/src/app/components/ui/modal/modal.component.html
@@ -1,4 +1,5 @@
-<div class="modal" *ngIf="visibility$ | async" [ngClass]="{'padding' : padding}" (clickOutside)="visibility$.next(false)">
+<div class="modal" *ngIf="visibility$ | async" [ngClass]="{'padding' : padding}" [ngStyle]="{'backgroundColor' : backgroundColor}"
+        (clickOutside)="visibility$.next(false)">
     <app-x *ngIf="showX" class="x" (clickX)="visibility$.next(false)" />
     <ng-content></ng-content>
 </div>
