--- a/client/src/app/components/layout/room/puzzle-rush-room/puzzle-rush-room.component.scss
+++ b/client/src/app/components/layout/room/puzzle-rush-room/puzzle-rush-room.component.scss
@@ -151,7 +151,7 @@ header {
 
 .next-box-container {
     width: 100%;
-    height: 80px;
+    height: 90px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -177,6 +177,46 @@ header {
     margin-inline: 7px;
 }
 
+img {
+    display: block;
+}
+
+.timer {
+    display: flex;
+    flex-direction: row;
+    padding: 20px;
+    padding-bottom: 15px;
+    gap: 5px;
+    align-items: center;
+}
+
+.timer svg {
+    width: 24px;
+    height: 24px;
+}
+
+.timer path {
+    fill: white;
+    transition: fill 1s;
+}
+
+.timer p {
+    font-family: $main-font;
+    font-size: 35px;
+    font-weight: 700;
+    letter-spacing: 1px;
+    padding: 0;
+    margin: 0;
+    transition: color 1s;
+}
+
+.timer.red p {
+    color: $ui-red-color;
+}
+
+.timer.red path {
+    fill: $ui-red-color;
+}
 
 @media screen and (max-width: 1200px) {
   app-xp-status {
