--- a/client/src/app/components/layout/room/puzzle-rush-room/puzzle-rush-room.component.html
+++ b/client/src/app/components/layout/room/puzzle-rush-room/puzzle-rush-room.component.html
@@ -1,106 +1,132 @@
-<div class="root" *ngIf="state$ | async as state"
-[ngClass]="{
-    'incorrect': false
-}">
+<ng-container *ngIf="isCorrect$ | async as isCorrect">
+    <div class="root" *ngIf="state$ | async as state"
+    [ngClass]="{
+        'correct': isCorrect === PuzzleCorrect.CORRECT,
+        'incorrect': isCorrect === PuzzleCorrect.INCORRECT,
+        'rush' : state.players.length === 1,
+        'battle' : state.players.length === 2,
+    }">
 
 
-    <app-xp-status />
+        <app-xp-status />
 
-    <div class="content">
+        <div class="content">
 
-        <header>
-            <h1 class="title">PUZZLE RUSH</h1>
-        </header>
+            <header>
+                <h1 class="title">PUZZLE RUSH</h1>
+            </header>
 
-        <p class="instructions">
-            Solve as many puzzles as you can in 3 minutes, but 3 strikes and you're out!
-        </p>
+            <p class="instructions">
+                Solve as many puzzles as you can in 3 minutes, but 3 strikes and you're out!
+            </p>
 
-        <div class="main-row">
+            <div class="main-row">
 
-            <!-- show undo button if in puzzle solving mode and can undo -->
-            <app-outline-button class="undo-button" label="Undo"
-            [ngStyle]="{visibility: (canUndo$ | async) ? 'visible' : 'hidden'}" (click)="clickUndo$.next()" />
+                <!-- show undo button if in puzzle solving mode and can undo -->
+                <app-outline-button class="undo-button" label="Undo"
+                [ngStyle]="{visibility: (canUndo$ | async) ? 'visible' : 'hidden'}" (click)="clickUndo$.next()" />
 
-            <ng-container *ngIf="currentPuzzle$ | async as currentPuzzle">
+                <ng-container *ngIf="currentPuzzle$ | async as currentPuzzle">
 
-                <!-- If before game, show ready button -->
-                <app-nes-board *ngIf="state.status === PuzzleRushStatus.BEFORE_GAME"
-                    class="board" [scale]="3.3"
-                    [gameOver]="GameOverMode.READY"
-                    [gameOverShowNext]="true"
-                    (clickNext)="puzzleRushRoom.sendReadyEvent()"
-                />
-
-                <ng-container *ngIf="state.status === PuzzleRushStatus.DURING_GAME">
-
-                    <!-- If in countdown, show countdown -->
-                    <app-nes-board *ngIf="puzzleRushRoom.countdownTimer.time$ | async as time; else duringGame"
+                    <!-- If before game, show ready button -->
+                    <app-nes-board *ngIf="state.status === PuzzleRushStatus.BEFORE_GAME"
                         class="board" [scale]="3.3"
-                        [countdown]="time"
+                        [gameOver]="GameOverMode.READY"
+                        [gameOverShowNext]="true"
+                        (clickNext)="puzzleRushRoom.sendReadyEvent()"
                     />
 
-                    <ng-template #duringGame>
-                        <!-- If in game, show current puzzle -->
-                        <app-puzzle-nes-board *ngIf="state.status === PuzzleRushStatus.DURING_GAME"
-                            class="board" [scale]="3.3" [level]="18" [puzzle]="currentPuzzle"
-                            [undo$]="clickUndo$" (canUndo)="canUndo$.next($event)"
+                    <ng-container *ngIf="state.status === PuzzleRushStatus.DURING_GAME">
+
+                        <!-- If in countdown, show countdown -->
+                        <app-nes-board *ngIf="countdownTimer$ | async as time; else duringGame"
+                            class="board" [scale]="3.3"
+                            [countdown]="time"
                         />
-                    </ng-template>
 
-                </ng-container>
-                
-
-            </ng-container>
-
-    
-
-            <div class="puzzle-details">
-
-                <div class="puzzle-details-top">
-
-                    <ng-container *ngIf="state.status !== PuzzleRushStatus.AFTER_GAME">
-
-                        <div class="timer" [ngClass]="{'red' : timerRed(rushTimer$ | async)}">
-                            <svg width="23" height="23" viewBox="0 0 23 23" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                <path d="M11.5 0C5.15871 0 0 5.15871 0 11.5C0 17.8413 5.15871 23 11.5 23C17.8413 23 23 17.8413 23 11.5C23 5.15871 17.8413 0 11.5 0ZM15.3333 12.4583H11.5C10.971 12.4583 10.5417 12.03 10.5417 11.5V5.75C10.5417 5.22004 10.971 4.79167 11.5 4.79167C12.029 4.79167 12.4583 5.22004 12.4583 5.75V10.5417H15.3333C15.8633 10.5417 16.2917 10.97 16.2917 11.5C16.2917 12.03 15.8633 12.4583 15.3333 12.4583Z"/>
-                            </svg>
-                            <p>{{timerText(rushTimer$ | async)}}</p>
-                        </div>
-    
-                        <div class="next-box-container">
-                            <app-nes-piece  [scale]="3" *ngIf="currentPuzzle$ | async as currentPuzzle"
-                                [piece]="currentPuzzle.next" [level]="18"
+                        <ng-template #duringGame>
+                            <!-- If in game, show current puzzle -->
+                            <app-puzzle-nes-board *ngIf="state.status === PuzzleRushStatus.DURING_GAME"
+                                class="board" [scale]="3.3" [level]="18" [puzzle]="currentPuzzle"
+                                [undo$]="clickUndo$" (canUndo)="canUndo$.next($event)"
+                                (submitPuzzle)="puzzleRushRoom.submitPuzzle($event)"
+                                [ngClass]="{'shake' : incorrectShake$ | async}"
                             />
-                        </div>
+                        </ng-template>
 
                     </ng-container>
-
-                    
                     
 
-                </div>
-                
-                <div class="puzzle-details-bottom">
+                </ng-container>
 
-                    <!-- If in puzzle solution mode and has next puzzle, show "Next Puzzle" button -->
-                    <app-solid-button
-                        label="Skip Puzzle" [color]="ButtonColor.RED"
-                        [stretch]="true"
-                        [loadingSize]="15"
-                    />
+        
+
+                <div class="puzzle-details">
+
+                    <div class="puzzle-details-top">
+
+                        <ng-container *ngIf="state.status !== PuzzleRushStatus.AFTER_GAME">
+
+                            <div class="timer" [ngClass]="{'red' : timerRed(rushTimer$ | async)}">
+                                <svg width="23" height="23" viewBox="0 0 23 23" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M11.5 0C5.15871 0 0 5.15871 0 11.5C0 17.8413 5.15871 23 11.5 23C17.8413 23 23 17.8413 23 11.5C23 5.15871 17.8413 0 11.5 0ZM15.3333 12.4583H11.5C10.971 12.4583 10.5417 12.03 10.5417 11.5V5.75C10.5417 5.22004 10.971 4.79167 11.5 4.79167C12.029 4.79167 12.4583 5.22004 12.4583 5.75V10.5417H15.3333C15.8633 10.5417 16.2917 10.97 16.2917 11.5C16.2917 12.03 15.8633 12.4583 15.3333 12.4583Z"/>
+                                </svg>
+                                <p>{{timerText(rushTimer$ | async)}}</p>
+                            </div>
+        
+                            <div class="next-box-container">
+                                <app-nes-piece  [scale]="3" *ngIf="currentPuzzle$ | async as currentPuzzle"
+                                    [piece]="(canUndo$ | async) ? undefined : currentPuzzle.next" [level]="18"
+                                />
+                            </div>
+
+                        </ng-container>
+
+                        
+                        <div class="players">
+                            <div class="player" *ngFor="let player of state.players">
+                                <div class="user" *ngIf="state.players.length === 2">
+                                    <app-username [userid]="player.userid" [username]="player.username" [highestTrophies]="player.highestTrophies"
+                                        [fontSize]="20" [fontWeight]="600" />
+                                    <app-puzzle-elo [puzzleElo]="player.puzzleElo" [size]="20" [purple]="false" />
+                                </div>
+                                <div class="attempts-remaining">
+                                    <app-correctness-icon-square *ngFor="let i of [0, 1, 2]" width="40px"
+                                        [correctness]="(incorrectCount$ | async)! > i ? Correctness.INCORRECT : Correctness.NONE" />
+                                </div>
+                                <h1 class="score">{{puzzleRushScore(player)}}</h1>
+                                <div class="progress-matrix" *ngIf="progressMatrix$ | async as matrix">
+                                    <app-correctness-icon-square *ngFor="let attempt of matrix" width="18px"
+                                        [correctness]="attempt" />
+                                </div>
+                            </div>
+                        </div>
+                        
+
+                    </div>
+                    
+                    <div class="puzzle-details-bottom">
+
+                        <!-- If in puzzle solution mode and has next puzzle, show "Next Puzzle" button -->
+                        <app-solid-button
+                            label="Skip Puzzle" [color]="ButtonColor.RED" *ngIf="state.status === PuzzleRushStatus.DURING_GAME && !(countdownTimer$ | async)"
+                            [stretch]="true"
+                            [loadingSize]="15"
+                            (smartClick)="puzzleRushRoom.submitPuzzle({})"
+                        />
+                    </div>
+
                 </div>
+
+                <!-- spacer purposes -->
+                <app-outline-button class="undo-button" label="Undo"
+                [ngStyle]="{visibility: 'hidden'}" />
 
             </div>
 
-            <!-- spacer purposes -->
-            <app-outline-button class="undo-button" label="Undo"
-            [ngStyle]="{visibility: 'hidden'}" />
+            <div class="bottom"></div>
 
         </div>
 
-        <div class="bottom"></div>
-
     </div>
-
-</div>
+</ng-container>
