--- a/client/src/app/components/layout/room/puzzle-rush-room/puzzle-rush-room.component.scss
+++ b/client/src/app/components/layout/room/puzzle-rush-room/puzzle-rush-room.component.scss
@@ -1,19 +1,63 @@
 @import "../../../../../styles.scss";
 
+// .root {
+//     display: block;
+//     background: linear-gradient(7deg,rgba(182, 117, 4, 0.5) 0%,rgba(0,0,0,1) 70%);
+//     position: relative;
+
+//     transition: all 1s ease-in-out;
+
+//     width: 100%;
+//     height: 100%;
+// }
+
+// .root.correct {
+//     background: linear-gradient(7deg,rgba(4,182,32,.5) 0%,rgba(0,0,0,1) 70%);
+// }
+
+// .root.incorrect {
+//     background: linear-gradient(7deg,rgba(182, 4, 4, 0.5) 0%,rgba(0,0,0,1) 70%);
+// }
+
+/* Define the custom properties for gradient colors */
+    @property --color1 {
+        syntax: '<color>';
+        initial-value: rgba(182, 117, 4, 0.5);
+        inherits: false;
+}
+
+@property --color2 {
+    syntax: '<color>';
+    initial-value: rgba(0, 0, 0, 1);
+    inherits: false;
+}
+  
 .root {
     display: block;
-    background: linear-gradient(7deg,rgba(4,182,32,.5) 0%,rgba(0,0,0,1) 70%);
     position: relative;
-
-    transition: background-color 1s ease-in-out;
-
     width: 100%;
     height: 100%;
+
+    /* Use the custom properties in the gradient */
+    --color1: rgba(182, 117, 4, 0.5);
+    --color2: rgba(0, 0, 0, 1);
+    background: linear-gradient(7deg, var(--color1) 0%, var(--color2) 70%);
+
+    transition: --color1 0.3s ease-in-out, --color2 0.3s ease-in-out;
 }
 
-.root.incorrect {
-    background: linear-gradient(7deg,rgba(182, 4, 4, 0.5) 0%,rgba(0,0,0,1) 70%);
+/* Correct state */
+.root.correct {
+    --color1: rgba(4, 182, 32, 0.5);
+    --color2: rgba(0, 0, 0, 1);
 }
+
+/* Incorrect state */
+.root.incorrect {
+    --color1: rgba(182, 4, 4, 0.5);
+    --color2: rgba(0, 0, 0, 1);
+}
+
 
 app-xp-status {
     position: absolute;
@@ -184,8 +228,8 @@ img {
 .timer {
     display: flex;
     flex-direction: row;
-    padding: 20px;
-    padding-bottom: 15px;
+    padding: 15px;
+    padding-bottom: 5px;
     gap: 5px;
     align-items: center;
 }
@@ -216,6 +260,74 @@ img {
 
 .timer.red path {
     fill: $ui-red-color;
+}
+
+.battle .players {
+    width: 100%;
+    box-sizing: border-box;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+
+.players {
+    margin-top: 20px;
+}
+
+.player {
+    width: 100%;
+    box-sizing: border-box;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 5px;
+}
+
+.user {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 5px;
+}
+
+.attempts-remaining {
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+    align-items: center;
+}
+
+h1.score {
+    font-family: $main-font;
+    font-size: 35px;
+    font-weight: 700;
+    margin: 0;
+    padding: 0;
+}
+
+.progress-matrix {
+    display: grid;
+    grid-template-rows: repeat(10, 1fr);
+    grid-auto-flow: column;
+    row-gap: 5px;
+    column-gap: 5px;
+}
+
+@keyframes shake {
+    0% { transform: rotate(0deg) translate(0, 0)}
+    20% { transform: rotate(1deg) translate(3px, 3px)}
+    40% { transform: rotate(0deg) translate(0, 0)}
+    60% { transform: rotate(-1deg) translate(-3px, 3px)}
+    100% { transform: rotate(0deg) translate(0, 0)}
+}
+
+app-puzzle-nes-board {
+    display: block;
+}
+
+app-puzzle-nes-board.shake {
+    animation: shake 0.15s;
+    animation-iteration-count: 2;
 }
 
 @media screen and (max-width: 1200px) {
