--- a/client/src/app/components/ui/puzzle-elo/puzzle-elo.component.scss
+++ b/client/src/app/components/ui/puzzle-elo/puzzle-elo.component.scss
@@ -14,6 +14,8 @@ h1 {
     font-family: $main-font;
     font-weight: 700;
     margin: 0;
-    color: $puzzle-color;
+}
 
+.purple h1 {
+    color: $puzzle-color;
 }
