--- a/client/src/app/components/ui/outline-button/outline-button.component.html
+++ b/client/src/app/components/ui/outline-button/outline-button.component.html
@@ -1,3 +1,3 @@
-<div class="button prevent-select">
+<button class="button prevent-select" (click)="click.emit($event)">
     <h1 class="label">{{ label }}</h1>
-</div>
+</button>
