fix puzzle rush keybind and locked bug

--- a/client/src/app/components/layout/room/puzzle-rush-room/puzzle-rush-room.component.html
+++ b/client/src/app/components/layout/room/puzzle-rush-room/puzzle-rush-room.component.html
@@ -51,6 +51,7 @@
                                 [undo$]="clickUndo$" (canUndo)="canUndo$.next($event)"
                                 (submitPuzzle)="puzzleRushRoom.submitPuzzle($event)"
                                 [ngClass]="{'shake' : incorrectShake$ | async}"
+                                [rotateLeftKeybind]="rotateLeftKeybind" [rotateRightKeybind]="rotateRightKeybind"
                             />
                         </ng-template>
 
